--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <h1><center> Pokemon Brlliant Diamond and Shining Pearl</h1></center>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <p><p style="color:blue">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, distinctio. Enim, exercitationem quo beatae voluptatibus pariatur nisi est maiores facere voluptates molestiae temporibus corporis dolores ad non! Voluptates, a vel?</p>
+    <img src="POKEMON.jpg" alt="POKEMON BDSP">
     <script src="script.js"></script>
+    <table style="width:100%">
+  <tr>
+    <th>Pokemon Starters</th>
+    <th>Type</th>
+    <th>Final Evoloution</th>
+  </tr>
+  <tr>
+    <td>Piplup</td>
+    <td>Water</td>
+    <td>Empoleon</td>
+  </tr>
+  <tr>
+    <td>Chimchar</td>
+    <td>Fire</td>
+    <td>Infernape</td>
+  </tr>
+  <tr>
+    <td>Turtwig</td>
+    <td>Grass</td>
+    <td>Torterra</td>
+  </tr>
+</table>
   </body>
 </html>
